--- a/public/css/index.css
+++ b/public/css/index.css
@@ -2,66 +2,55 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+
 }
 
-.login-section,
-.singup-section {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    height: 100vh;
+body {
     background-color: whitesmoke;
 }
 
-.login-area,
-.singup-area {
-    background-color: white;
-    padding: 80px 100px;
-    box-shadow:
-        inset 0 -3em 3em rgba(0, 0, 0, 0.1),
-        0 0 0 2px rgb(255, 255, 255),
-        0.3em 0.3em 1em rgba(0, 0, 0, 0.3);
-    border-radius: 10px;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    gap: 50px;
+.taskPen,
+.taskCross {
+    position: fixed;
+    bottom: 50px;
+    right: 50px;
 }
 
-.login-area h1,
-.singup-area h1 {
-    font-size: 2.3em;
-    font-weight: 600;
-    color: #333;
-    margin-bottom: 30px;
-}
-
-.main-login img,
-.main-singup img {
-    width: 100%;
-    height: auto;
-    max-width: 350px;
+.taskPen span,
+.taskCross span {
+    font-size: 30px;
+    cursor: pointer;
+    background-color: black;
+    color: white;
+    padding: 15px;
     border-radius: 51%;
 }
 
-.main-login,
-.main-singup {
-    display: flex;
-    gap: 60px;
+.taskCross span {
+    font-size: 40px;
+    padding: 10px 20px;
 }
 
-.login-form,
-.singup-form {
-    display: flex;
-    flex-direction: column;
-    gap: 25px;
+textarea {
+    width: 100%;
+    min-height: 220px;
+    border-radius: 5px;
+    padding: 15px 10px;
+    font-size: 16px;
+    text-decoration: none;
+    outline: none;
+    resize: none;
+    border: 1px solid rgba(0, 0, 0, 0.543);
+}
+
+label {
+    display: block;
+    margin-bottom: 5px;
 }
 
 input {
     width: 100%;
-    min-width: 200px;
+    min-width: 550px;
     border-radius: 5px;
     padding: 15px 10px;
     font-size: 16px;
@@ -73,7 +62,7 @@ input {
 button {
     cursor: pointer;
     width: 100%;
-    min-width: 400px;
+    min-width: 550px;
     border-radius: 5px;
     padding: 15px 10px;
     font-size: 16px;
@@ -81,18 +70,46 @@ button {
     text-decoration: none;
     outline: none;
     color: white;
-    background-color: #066093;
+    background-color: rgba(0, 128, 0, 0.772);
     border: 1px solid rgba(0, 0, 0, 0.543);
 }
 
-.singup-inputs input {
-    display: flex;
-    flex-direction: column;
-    min-width: 220px;
+
+
+.addTaskArea {
+    display: none;
+    justify-content: center;
+    align-items: center;
+    height: 100vh;
     width: 100%;
 }
 
-.singup-section img {
-    max-width: 400px;
+.formActive {
+    display: flex;
+}
 
+.taskCross {
+    display: none;
+}
+
+.taskPen {
+    display: block;
+}
+
+
+.addTask {
+    background-color: white;
+    padding: 50px 80px;
+    border-radius: 15px;
+}
+
+.task-form {
+    display: flex;
+    flex-direction: column;
+    gap: 15px;
+}
+
+.addTask h2 {
+    font-size: 30px;
+    margin-bottom: 20px;
 }
