--- a/public/css/index.css
+++ b/public/css/index.css
@@ -6,7 +6,14 @@
 }
 
 body {
-    background-color: whitesmoke;
+    background-color: white;
+}
+
+/* add task model section  */
+header h1 {
+    text-align: center;
+    margin: 20px 0 50px;
+    font-size: 35px;
 }
 
 .taskPen,
@@ -33,14 +40,15 @@ body {
 
 textarea {
     width: 100%;
-    min-height: 220px;
+    min-height: 150px;
+    min-width: 400px;
     border-radius: 5px;
     padding: 15px 10px;
     font-size: 16px;
     text-decoration: none;
     outline: none;
     resize: none;
-    border: 1px solid rgba(0, 0, 0, 0.543);
+    border: 2px solid rgba(0, 0, 0, 0.543);
 }
 
 label {
@@ -50,9 +58,9 @@ label {
 
 input {
     width: 100%;
-    min-width: 550px;
+    min-width: 400px;
     border-radius: 5px;
-    padding: 15px 10px;
+    padding: 10px 10px;
     font-size: 16px;
     margin-bottom: 20px;
     text-decoration: none;
@@ -62,7 +70,7 @@ input {
 button {
     cursor: pointer;
     width: 100%;
-    min-width: 550px;
+    min-width: 400px;
     border-radius: 5px;
     padding: 15px 10px;
     font-size: 16px;
@@ -77,11 +85,12 @@ button {
 
 
 .addTaskArea {
+    background-color: whitesmoke;
     display: none;
     justify-content: center;
     align-items: center;
+    flex-direction: column;
     height: 100vh;
-    width: 100%;
 }
 
 .formActive {
@@ -99,7 +108,7 @@ button {
 
 .addTask {
     background-color: white;
-    padding: 50px 80px;
+    padding: 30px 80px;
     border-radius: 15px;
 }
 
@@ -112,4 +121,92 @@ button {
 .addTask h2 {
     font-size: 30px;
     margin-bottom: 20px;
+}
+
+/* all task section  */
+.allTasksArea {
+    /* background-color: white; */
+    padding: 0 0 100px 0;
+}
+
+.taskList {
+    width: 90%;
+    margin: 0 auto;
+}
+
+.taskList h1 {
+    text-align: center;
+    font-size: 40px;
+    font-weight: bold;
+}
+
+.tasks {
+    display: flex;
+    justify-content: center;
+    gap: 30px;
+    flex-wrap: wrap;
+}
+
+.heading {
+    font-size: 20px;
+    font-weight: bold;
+}
+
+.task {
+    width: 400px;
+    min-width: 30px;
+    max-width: 400px;
+    border: 2px solid green;
+    height: 300px;
+    min-height: 250px;
+    padding: 25px 20px 25px 30px;
+    border-radius: 7px;
+    display: flex;
+    gap: 10px;
+}
+
+.content-area {
+    width: 89%;
+    word-wrap: break-word;
+}
+
+.content {
+    padding-right: 10px;
+}
+
+.trash,
+.edit {
+    cursor: pointer;
+    font-size: 25px;
+}
+
+.trash {
+    color: red;
+}
+
+.edit {
+    color: green;
+}
+
+.sidebar {
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
+}
+
+
+::-webkit-scrollbar {
+    width: 10px;
+}
+
+::-webkit-scrollbar-track {
+    background: #f1f1f1;
+}
+
+::-webkit-scrollbar-thumb {
+    background: #888;
+}
+
+::-webkit-scrollbar-thumb:hover {
+    background: #555;
 }
