--- a/templates/views/login.hbs
+++ b/templates/views/login.hbs
@@ -4,7 +4,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="css/auth.css" />
-    <title>Task Manager|Sing in</title>
+    <title>Task Manager|Sign in</title>
   </head>
   <body>
     <section class="login-section">
@@ -24,6 +24,6 @@
       </div>
     </section>
 
-    <script src="/public/js/login.js"></script>
+    <script src="/js/login.js"></script>
   </body>
 </html>
