--- a/templates/views/signup.hbs
+++ b/templates/views/signup.hbs
@@ -25,6 +25,6 @@
         </div>
       </div>
     </section>
-    <script src="../../public/js/singup.js"></script>
+    <script src="/js/singup.js"></script>
   </body>
 </html>
