--- a/templates/views/index.hbs
+++ b/templates/views/index.hbs
@@ -1,4 +1,3 @@
-<!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
@@ -8,11 +7,10 @@
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css"
     />
-    <link rel="stylesheet" href="./css/index.css" />
+    <link rel="stylesheet" href="css/index.css" />
     <title>Task Manager|Home</title>
   </head>
   <body>
-    <!-- <h1>Welcome To Task Manager App</h1> -->
     <section class="navbar-area">
       <div class="navbar">
         <nav class="navbar-nav">
@@ -25,10 +23,10 @@
                 <span><i class="fa-solid fa-house"></i></span>
                 <li class="nav-link">Home</li>
               </div>
-              <div class="nav-link-div">
+              <!-- <div class="nav-link-div">
                 <span><i class="fa-solid fa-list-check"></i></span>
                 <li class="nav-link">Tasks</li>
-              </div>
+              </div> -->
               <div class="nav-link-div">
                 <span><i class="fa-solid fa-address-card"></i></span>
                 <li class="nav-link">About Us</li>
@@ -37,17 +35,93 @@
                 <span><i class="fa-solid fa-list-check"></i></span>
                 <li class="nav-link">Contact Us</li>
               </div>
+              <a href="/login">
+                <div class="nav-link-div">
+                  <span><i class="fa-solid fa-right-to-bracket"></i></span>
+                  <li class="nav-link">Sign in</li>
+                </div></a>
+              <a href="/signup">
+                <button class="signupbtn nav-link-div">
+                  <span><i class="fa-solid fa-user-plus"></i></span>
+                  <li class="nav-link">Start For Free</li>
+                </button></a>
             </ul>
-            <form class="seach-bar searchForm">
+            <!-- <form class="seach-bar searchForm">
               <input type="search" placeholder="Search" name="searchbar" />
               <a type="button" href=""
                 ><span class="searchIcon"
                   ><i class="fa-solid fa-magnifying-glass"></i></span
               ></a>
-            </form>
+            </form> -->
           </div>
         </nav>
       </div>
+    </section>
+    <section class="main-area">
+      <main>
+        <div class="main-div">
+          <div class="info-heading">
+            <span>Create,</span>
+            <span>Focus,</span>
+            <span> And Succeed</span>
+          </div>
+          <div class="info-text">
+            <p>
+              The key is in not spending time, but in investing it wisely and
+              orderely
+            </p>
+            <p>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit.
+              Molestias, dolorem?
+            </p>
+          </div>
+          <div class="joinBtn">
+            <a type="button" href="/signup"> Start For Free </a>
+          </div>
+        </div>
+        <div class="sec-div">
+          <div class="div1-area">
+            <div class="div1-img">
+              <img src="./assets/task1Img.webp" alt="" />
+            </div>
+            <div class="div1-info">
+              <h1>Lorem ipsum dolor sit.</h1>
+              <p>
+                Lorem ipsum dolor sit amet consectetur, a perferendis
+                repellendus aliquam ab! Velit in fuga nemo saepe eius aliquid
+                temporibus, officia ad rem. Dolorum exercitationem, debitis
+                voluptatum inventore nesciunt adipisci ipsum ipsa eum laudantium
+                corrupti obcaecati, natus dicta at velit minus excepturi?
+              </p>
+            </div>
+          </div>
+          <div class="div2-area">
+            <div class="div2-info">
+              <h1>Lorem ipsum dolor sit amet consectetur.</h1>
+              <p>
+                Lorem ipsum dolor sit amet consectetur adipisiciti accusantium
+                velit dolorum ut adipisci libero cum, atque nam commodi iste
+                doloremque tempore neque laboriosam! Vel, sunt.
+              </p>
+            </div>
+            <div class="div2-img">
+              <img src="./assets/task2Img.webp" alt="" />
+            </div>
+          </div>
+          <div class="last-div">
+            <div class="lastdiv-img">
+              <img src="./assets/lastTaskImg.webp" alt="" />
+            </div>
+            <div class="lastdiv-quote">
+              <h2>
+                Once you have mastered time, you will understand how true it is
+                that most people overestimate what they can accomplish in a year
+                - and underestimate what they can achieve in a decade
+              </h2>
+            </div>
+          </div>
+        </div>
+      </main>
     </section>
     <section class="footer-area">
       <div class="footer">
@@ -127,6 +201,6 @@
         </footer>
       </div>
     </section>
-    <script src="./js/index.js"></script>
+    <script src="/js/index.js"></script>
   </body>
 </html>
