--- a/templates/views/mytasks.hbs
+++ b/templates/views/mytasks.hbs
@@ -7,7 +7,7 @@
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css"
     />
-    <link rel="stylesheet" href="css/tasks.css" />
+    <link type="text/css" rel="stylesheet" href="/css/tasks.css" />
     <title>Task Manager|Home</title>
   </head>
   <body>
@@ -72,7 +72,7 @@
       <div class="navbar">
         <nav class="navbar-nav">
           <div class="brandLogo">
-            <img src="./assets/taskImg2.jpg" alt="brand logo" />
+            <img src="assets/taskImg2.jpg" alt="brand logo" />
           </div>
           <div class="nav-links">
             <ul>
@@ -116,121 +116,34 @@
           <form class="task-form">
             <div class="addTask__input">
               <label for="taskName">Task Name</label>
-              <input type="text" name="taskName" id="taskName" />
+              <input type="text" name="taskName" id="taskName" required />
             </div>
             <div id="taskDueDate__input">
               <label for="taskDueDate">Due Date</label>
-              <input type="date" name="duedate" id="taskDueDate" />
+              <input type="date" name="duedate" id="taskDueDate" required />
             </div>
             <div class="addTask__input">
               <label for="taskDescription">Task Description</label>
-              <textarea name="taskDescription" id="taskDescription"></textarea>
+              <textarea
+                name="taskDescription"
+                id="taskDescription"
+                required
+              ></textarea>
             </div>
-            <button class="addTaskBtn">Add Task</button>
+            <button type="submit" class="addTaskBtn">Add Task</button>
           </form>
         </div>
       </div>
     </section>
-    <section class="allTasksArea">
+     <section class="allTasksArea">
       <header>
         <h1>Welcome To Task Manager App</h1>
       </header>
       <div class="taskList">
         <div class="tasks">
-          <div class="task1 task">
-            <div class="content-area">
-              <label align="justify" for="taskTitle"><span class="heading">Ttile
-                  :
-                </span>
-                Task One</label>
-              <label align="justify" for="taskDue"><span class="heading">
-                  Due :
-                </span>
-                11-Mar-2022</label>
-              <label for="Des"><span class="heading"> Description : </span>
-              </label>
-              <p align="justify" class="content">
-                Lor lorem200 olorum ducimus.lorem200 Lorem ipsum dolor
-                lorem200runtLor lorem200 olorum ducimus.lorem200 Lorem ipsum
-                dolor lorem200runtLor lorem200 olorum ducimus.lorem200 Lorem
-                ipsum dolor lorem200runtLor lorem200 olorum ducimus.lorem200
-                Lorem ipsum dolor lorem200runtLor lorem200 olorum
-                ducimus.lorem200 Lorem ipsum dolor lorem200rulorem200runtnt ?
-              </p>
-            </div>
-            <div class="sidebar">
-              <span class="edit">
-                <i class="fa-solid fa-pen-to-square"></i>
-              </span>
-              <span class="trash"><i
-                  class="fa-solid fa-trash-can-arrow-up"
-                ></i></span>
-            </div>
-          </div>
-          <div class="task1 task">
-            <div class="content-area">
-              <label align="justify" for="taskTitle"><span class="heading">Ttile
-                  :
-                </span>
-                Task One</label>
-              <label align="justify" for="taskDue"><span class="heading">
-                  Due :
-                </span>
-                11-Mar-2022</label>
-              <label for="Des"><span class="heading"> Description : </span>
-              </label>
-              <p align="justify" class="content">
-                Lor lorem200 olorum ducimus.lorem200 Lorem ipsum dolor
-                lorem200runtLor lorem200 olorum ducimus.lorem200 Lorem ipsum
-                dolor lorem200runtLor lorem200 olorum ducimus.lorem200 Lorem
-                ipsum dolor lorem200runtLor lorem200 olorum ducimus.lorem200
-                Lorem ipsum dolor lorem200runtLor lorem200 olorum
-                ducimus.lorem200 Lorem ipsum dolor lorem200rulorem200runtnt
-                lorem100 ?
-              </p>
-            </div>
-            <div class="sidebar">
-              <span class="edit">
-                <i class="fa-solid fa-pen-to-square"></i>
-              </span>
-              <span class="trash"><i
-                  class="fa-solid fa-trash-can-arrow-up"
-                ></i></span>
-            </div>
-          </div>
-          <div class="task1 task">
-            <div class="content-area">
-              <label align="justify" for="taskTitle"><span class="heading">Ttile
-                  :
-                </span>
-                Task One</label>
-              <label align="justify" for="taskDue"><span class="heading">
-                  Due :
-                </span>
-                11-Mar-2022</label>
-              <label for="Des"><span class="heading"> Description : </span>
-              </label>
-              <p align="justify" class="content">
-                Lor lorem200 olorum ducimus.lorem200 Lorem ipsum dolor
-                lorem200runtLor lorem200 olorum ducimus.lorem200 Lorem ipsum
-                dolor lorem200runtLor lorem200 olorum ducimus.lorem200 Lorem
-                ipsum dolor lorem200runtLor lorem200 olorum ducimus.lorem200
-                Lorem ipsum dolor lorem200runtLor lorem200 olorum
-                ducimus.lorem200 Lorem ipsum dolor lorem200rulorem200runtnt ?
-              </p>
-            </div>
-            <div class="sidebar">
-              <span class="edit">
-                <i class="fa-solid fa-pen-to-square"></i>
-              </span>
-              <span class="trash"><i
-                  class="fa-solid fa-trash-can-arrow-up"
-                ></i></span>
-            </div>
-          </div>
-        </div>
+          
       </div>
-    </section>
+    </section> 
     <script
       src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/js/all.min.js"
     ></script>
