change in update task section

--- a/templates/views/mytasks.hbs
+++ b/templates/views/mytasks.hbs
@@ -51,10 +51,6 @@
             </div>
           </div>
           <div class="security">
-            {{!-- <div class="currentPass">
-              <label for="currentPass">Current Password</label>
-              <input type="password" name="currnetPass" />
-            </div> --}}
             <div class="newPass">
               <label for="newPass">New Password</label>
               <input id="newPassword" type="password" name="newPass" />
@@ -75,7 +71,7 @@
       <div class="navbar">
         <nav class="navbar-nav">
           <div class="brandLogo">
-            <img src="assets/taskImg2.jpg" alt="brand logo" />
+            <img src="/assets/taskImg2.jpg" alt="brand logo" />
           </div>
           <div class="nav-links">
             <ul>
