loading spinner added

--- a/public/css/tasks.css
+++ b/public/css/tasks.css
@@ -9,6 +9,53 @@ body {
     background-color: white;
 }
 
+.loading-spinner {
+    position: fixed;
+    background-color: rgba(0, 0, 0, 0.445);
+    background-blend-mode: darken;
+    height: 100vh;
+    width: 100%;
+    display: none;
+}
+
+.lds-hourglass {
+    width: 300px;
+    height: 300px;
+    position: fixed;
+    left: 45%;
+    top: 25%;
+}
+
+.lds-hourglass:after {
+    content: " ";
+    display: block;
+    border-radius: 50%;
+    width: 0;
+    height: 0;
+    margin: 8px;
+    box-sizing: border-box;
+    border: 32px solid #fff;
+    border-color: #e96847 transparent #e96847 transparent;
+    animation: lds-hourglass 1.2s infinite;
+}
+
+@keyframes lds-hourglass {
+    0% {
+        transform: rotate(0);
+        animation-timing-function: cubic-bezier(0.55, 0.055, 0.675, 0.19);
+    }
+
+    50% {
+        transform: rotate(900deg);
+        animation-timing-function: cubic-bezier(0.215, 0.61, 0.355, 1);
+    }
+
+    100% {
+        transform: rotate(1800deg);
+    }
+}
+
+
 /* add task model section  */
 header h1 {
     text-align: center;
