--- a/templates/views/mytasks.hbs
+++ b/templates/views/mytasks.hbs
@@ -11,6 +11,9 @@
     <title>Task Manager|Home</title>
   </head>
   <body>
+    <div class="loading-spinner">
+      <div class="lds-hourglass"></div>
+    </div>
     <div class="taskPen">
       <span class="pen">
         <i class="pens fa-solid fa-pen"></i>
